src/test/deca/context/invalid/resultats/test4_op_modulo3-cont.res
./src/test/deca/context/invalid/test4_op_modulo3.deca:16:1: Modulo operator must be applied to two expression of int type (right expression's type : boolean, left expression's type : int).
